<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">LabExam02</string>
    <string name="btn_launch">Button</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Signup</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_today">Today</string>
    <string name="btn_add_nav">Add</string>
    <string name="btn_calendar_nav">Calendar</string>
    <string name="btn_home_nav">Home</string>
    <string name="btn_profile_nav">Profile</string>
    <string name="back_to_launch">backToLaunch</string>
    <string name="back_to_login">backToLogin</string>
    <string name="to_signup">Signup</string>
    <string name="txt1">9am-10am Morning Workout</string>
    <string name="txt2">11am - 1pm Client Meeting(Mr.John)</string>
    <string name="txt3">1.30pm - 2pm Lunch</string>
    <string name="txt4">3pm - 4.30pm Clara\'s Shop Opening</string>
    <string name="txt5">5.pm - 7pm Workshop</string>
    <string name="txt6">8pm John\'s Birthday Party</string>
    <string name="txt7">Hi, Ellie!</string>
    <string name="txt8">26 march</string>
    <string name="txt9">1pm</string>
    <string name="txt10">Launching Monthly Journal</string>
    <string name="txt11">9am</string>
    <string name="txt12">23 march</string>
    <string name="txt13">Complete the Monthy Journal</string>
    <string name="txt14">Today Tasks</string>
    <string name="txt15">Pinned Tasks</string>
    <string name="txt16">Have a nice day!!</string>
    <string name="txt17">add here</string>
    <string name="txt18">add here</string>
    <string name="txt19">add here</string>
    <string name="txt20">add here</string>
    <string name="txt21">add here</string>
    <string name="add_1">Hi, Ellie!</string>
    <string name="add_2">Add Your Tasks Here</string>
    <string name="add_3">11 March</string>
    <string name="login_1">Login</string>
    <string name="login_2">Email</string>
    <string name="login_3">Password</string>
    <string name="login_4">Forgot Password?</string>
    <string name="login_5">Don\'t have an Account?</string>
    <string name="signup_1">Signup</string>
    <string name="signup_2">Email</string>
    <string name="signup_3">Password</string>
    <string name="signup_4">Username</string>
    <string name="signup_5">Confirm Password</string>
    <string name="pro_1">Ellie John</string>
    <string name="pro_2">20.07.2002</string>
    <string name="pro_3">ellijohn@gmail.com</string>
    <string name="pro_4">Journalist</string>
    <string name="pro_5">Monthly Preview</string>
    <string name="pro_6">Ongoing Tasks</string>
    <string name="pro_7">Tasks Completed</string>
    <string name="pro_8">Tasks Incompleted</string>
    <string name="pro_9">In Progress</string>
    <string name="cal_1">10 Mar</string>
    <string name="cal_2">11 Mar</string>
    <string name="cal_3">12 Mar</string>
    <string name="cal_4">13 Mar</string>
</resources>