<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAFDBA"
    android:backgroundTint="#DAFDBA">

    <View
        android:layout_width="377dp"
        android:layout_height="523dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="-1dp"
        android:background="@drawable/bg_view" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="375dp"
        android:text="@string/signup_1"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="328dp"
        android:layout_height="57dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="242dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/signup_2"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="328dp"
        android:layout_height="59dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="176dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/signup_3"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_to_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="265dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#13678A"
        android:text="@string/btn_signup"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="546dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/task_list_illustration_vector" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="326dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="313dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/signup_4"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="328dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="41dp"
        android:layout_marginBottom="108dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/signup_5"
        android:textColor="#FFFFFF" />

    <ImageButton
        android:id="@+id/back_to_login"
        android:layout_width="58dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="781dp"
        android:backgroundTint="#45C4B0"
        android:contentDescription="@string/back_to_login"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/left_chevron_black_16111" />

</RelativeLayout>