<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAFDBA"
    tools:context=".homepage">


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="411dp"
        android:layout_height="260dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomAppBar4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="335dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="#DAFDBA"
                android:gravity="center"
                android:paddingVertical="30dp" />

            <TextView
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#9AEBA3"
                android:gravity="center"
                android:paddingVertical="30dp"
                android:text="@string/txt1" />

            <TextView
                android:layout_width="335dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="#DAFDBA"
                android:gravity="center"
                android:paddingVertical="30dp" />

            <TextView
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#9AEBA3"
                android:gravity="center"
                android:paddingVertical="30dp"
                android:text="@string/txt2" />

            <TextView
                android:layout_width="335dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="#DAFDBA"
                android:gravity="center"
                android:paddingVertical="30dp" />

            <TextView
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#9AEBA3"
                android:gravity="center"
                android:paddingVertical="30dp"
                android:text="@string/txt3" />

            <TextView
                android:layout_width="335dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="#DAFDBA"
                android:gravity="center"
                android:paddingVertical="30dp" />

            <TextView
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#9AEBA3"
                android:gravity="center"
                android:paddingVertical="30dp"
                android:text="@string/txt4" />

            <TextView
                android:layout_width="335dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="#DAFDBA"
                android:gravity="center"
                android:paddingVertical="30dp" />

            <TextView
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#9AEBA3"
                android:gravity="center"
                android:paddingVertical="30dp"
                android:text="@string/txt5" />

            <TextView
                android:layout_width="335dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="#DAFDBA"
                android:gravity="center"
                android:paddingVertical="30dp" />

            <TextView
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#9AEBA3"
                android:gravity="center"
                android:paddingVertical="30dp"
                android:text="@string/txt6" />

        </LinearLayout>


    </ScrollView>

    <View
        android:layout_width="413dp"
        android:layout_height="370dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="4dp"
        android:background="@drawable/bg2_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="409dp"
        android:layout_height="96dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:background="@drawable/bg2_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar3"
        android:layout_width="376dp"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:backgroundTint="#45C4B0"
        app:backgroundTint="#A999CFD6"
        app:fabCradleRoundedCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977"
        tools:ignore="BottomAppBar" />

    <ImageButton
        android:id="@+id/btn_add_nav"
        android:layout_width="66dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#45C4B0"
        android:contentDescription="@string/btn_add_nav"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar3"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar3"
        app:srcCompat="@drawable/plus_11969" />

    <ImageButton
        android:id="@+id/btn_calendar_nav"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#45C4B0"
        android:contentDescription="@string/btn_calendar_nav"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar3"
        app:layout_constraintEnd_toStartOf="@+id/btn_home_nav"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar3"
        app:srcCompat="@drawable/calendar_11066" />

    <ImageButton
        android:id="@+id/btn_home_nav"
        android:layout_width="64dp"
        android:layout_height="62dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#009688"
        android:contentDescription="@string/btn_home_nav"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar3"
        app:layout_constraintEnd_toStartOf="@+id/btn_profile_nav"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/home_2502" />

    <ImageButton
        android:id="@+id/btn_profile_nav"
        android:layout_width="64dp"
        android:layout_height="62dp"
        android:layout_marginStart="302dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#45C4B0"
        android:contentDescription="@string/btn_profile_nav"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar3"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar3"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar3"
        app:srcCompat="@drawable/user_4251" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="304dp"
        android:text="@string/txt7"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="55dp"
        android:layout_height="63dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/user_profile_svgrepo_com" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="352dp"
        android:layout_height="77dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="144dp"
        app:backgroundTint="#45C4B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="BottomAppBar" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar4"
        android:layout_width="352dp"
        android:layout_height="77dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        app:backgroundTint="#45C4B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomAppBar"
        tools:ignore="BottomAppBar" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="6dp"
        android:text="@string/txt8"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar4"
        app:layout_constraintEnd_toEndOf="@+id/bottomAppBar4"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar4"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="6dp"
        android:text="@string/txt9"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar4"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar4"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar4"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="73dp"
        android:text="@string/txt10"
        app:layout_constraintEnd_toEndOf="@+id/bottomAppBar4"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar4"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="12dp"
        android:text="@string/txt11"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="13dp"
        android:text="@string/txt12"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="@+id/bottomAppBar"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="219dp"
        android:layout_height="24dp"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="40dp"
        android:text="@string/txt13"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="@+id/bottomAppBar"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="114dp"
        android:layout_height="20dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="262dp"
        android:text="@string/txt14"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomAppBar4" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="282dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txt15"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="25dp"
        android:text="@string/txt16"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textView21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />
</androidx.constraintlayout.widget.ConstraintLayout>

