<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAFDBA"
    tools:context=".calendar">

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar3"
        android:layout_width="376dp"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:backgroundTint="#45C4B0"
        app:backgroundTint="#A999CFD6"
        app:fabCradleRoundedCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977"
        tools:ignore="BottomAppBar" />

    <ImageButton
        android:id="@+id/btn_add_nav"
        android:layout_width="66dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#45C4B0"
        android:contentDescription="@string/btn_add_nav"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar3"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar3"
        app:srcCompat="@drawable/plus_11969" />

    <ImageButton
        android:id="@+id/btn_calendar_nav"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#009688"
        android:contentDescription="@string/btn_calendar_nav"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar3"
        app:layout_constraintEnd_toStartOf="@+id/btn_home_nav"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar3"
        app:srcCompat="@drawable/calendar_11066" />

    <ImageButton
        android:id="@+id/btn_home_nav"
        android:layout_width="64dp"
        android:layout_height="62dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#45C4B0"
        android:contentDescription="@string/btn_home_nav"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar3"
        app:layout_constraintEnd_toStartOf="@+id/btn_profile_nav"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/home_2502" />

    <ImageButton
        android:id="@+id/btn_profile_nav"
        android:layout_width="64dp"
        android:layout_height="62dp"
        android:layout_marginStart="302dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#45C4B0"
        android:contentDescription="@string/btn_profile_nav"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar3"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar3"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar3"
        app:srcCompat="@drawable/user_4251" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="55dp"
        android:layout_height="63dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/user_profile_svgrepo_com" />

    <Button
        android:id="@+id/button2"
        android:layout_width="79dp"
        android:layout_height="133dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="9dp"
        android:backgroundTint="#45C4B0"
        android:text="@string/cal_1"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="98dp"
        android:layout_height="186dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="21dp"
        android:backgroundTint="#45C4B0"
        android:outlineAmbientShadowColor="#A19898"
        android:shadowDx="100"
        android:text="@string/cal_2"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="87dp"
        android:layout_height="141dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#45C4B0"
        android:text="@string/cal_3"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="82dp"
        android:layout_height="115dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#45C4B0"
        android:text="@string/cal_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="385dp"
        android:layout_height="487dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:srcCompat="@drawable/gp1" />

    <Button
        android:id="@+id/btn_today"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="66dp"
        android:layout_height="63dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="165dp"
        android:backgroundTint="#9AEBA3"
        android:text="@string/btn_today"
        android:textColor="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/imageView21"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/imageView21"
        app:layout_constraintTop_toTopOf="@+id/imageView21" />

</androidx.constraintlayout.widget.ConstraintLayout>